--- a/public/style.css
+++ b/public/style.css
@@ -57,3 +57,35 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.owner {
+    margin-left: 2%;
+    margin-top: 2%;
+}
+
+.filecontainer {
+    border-width: 2px;
+    border-color: black;
+    border-style: solid;
+    border-radius: 5%;
+    width: 150px;
+    height: 125px;
+    display: inline-block;
+}
+
+#newfileform {
+    margin-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+#form {
+    width: 100%;
+    font-size: 24px;
+}
+
+#fileName,
+#collaborators {
+    width: 100%;
+}
